--- a/VQMC.ipynb
+++ b/VQMC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjrl9ov7cdm188bAAHsKyN",
+      "authorship_tag": "ABX9TyM6Z7BU3CqmDtuLCdGbuYlK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,15 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**VQMC (Variational Quantum Monte Carlo)** - это метод, который используется для моделирования квантовых систем на квантовых компьютерах. Он сочетает в себе методы монте-карло и вариационный метод для приближенного решения гамильтониана системы. В VQMC используется компактное представление волновой функции с использованием тензорных сетей, которые затем оптимизируются с использованием классических и квантовых алгоритмов оптимизации. Результаты симуляции оцениваются путем расчета ожидаемых значений гамильтониана системы. VQMC может быть использован для моделирования различных квантовых систем, включая молекулярные системы, твердотельные системы и другие."
+      ],
+      "metadata": {
+        "id": "iASnrtBpb3ht"
+      }
     },
     {
       "cell_type": "markdown",
@@ -216,7 +225,7 @@
         "# Calculate the final energy of the system\n",
         "final_energy = energy(theta)\n",
         "\n",
-        "print(\"Final energy:\", final\n"
+        "print(\"Final energy:\", final)\n"
       ],
       "metadata": {
         "id": "H3WBiaRJCv64"
@@ -292,10 +301,19 @@
         "\n",
         "**4b.** Compare the results with existing methods, such as classical Monte Carlo methods or exact diagonalization, to evaluate the accuracy of the new construction method.\n",
         "\n",
-        "***This modified algorithm combines the concept of entanglement renormalization with hierarchical tensor networks to construct compressed wave function representations in VQMC simulations. The use of entanglement renormalization optimizes the fusion process between subsystems and improves the accuracy of the final wave function representation.*** ***bold text***"
+        "***This modified algorithm combines the concept of entanglement renormalization with hierarchical tensor networks to construct compressed wave function representations in VQMC simulations. The use of entanglement renormalization optimizes the fusion process between subsystems and improves the accuracy of the final wave function representation.*** "
       ],
       "metadata": {
         "id": "JPPfAgwE76Me"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Этот модифицированный алгоритм сочетает в себе ***концепцию перенормировки запутанности с иерархическими тензорными сетями для построения сжатых представлений волновой функции в симуляциях VQMC***. Использование перенормировки запутанности оптимизирует процесс слияния между подсистемами и повышает точность окончательного представления волновой функции."
+      ],
+      "metadata": {
+        "id": "J9_med56zb5v"
       }
     },
     {
@@ -364,6 +382,133 @@
       ],
       "metadata": {
         "id": "If5E8wTX_D9_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **GPT answer about its contribution:**   \n",
+        "My original contribution in the modified algorithm is ***the use of a hierarchical tree tensor network structure to represent the quantum state of the system***, which is well-suited for systems with a hierarchical structure of intricacies. This allows for a more efficient and accurate representation of the system's wave function.\n",
+        "\n",
+        "Additionally, I propose a ***novel method for optimizing the variational parameters in the compressed wavefunction representation.*** Instead of using traditional optimization techniques such as stochastic gradient descent, ***I suggest using a combination of classical and quantum optimization techniques that leverage the entanglement renormalization structure of the system*** to optimize the variational parameters in a more efficient and accurate way."
+      ],
+      "metadata": {
+        "id": "0nCTT8lfdiUb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **На русском**\n",
+        "Мой первоначальный вклад в модифицированный алгоритм заключается в ***использовании иерархической древовидной тензорной сетевой структуры для представления квантового состояния системы***, которая хорошо подходит для систем с иерархической структурой сложностей. Это позволяет более эффективно и точно представлять волновую функцию системы.\n",
+        "\n",
+        "Кроме того, я предлагаю ***новый метод оптимизации вариационных параметров в сжатом представлении волновой функции***. Вместо использования традиционных методов оптимизации, таких как стохастический градиентный спуск, я предлагаю ***использовать комбинацию классических и квантовых методов оптимизации, которые используют структуру ренормализации запутанности системы ***для более эффективной и точной оптимизации вариационных параметров."
+      ],
+      "metadata": {
+        "id": "RLXe5Am8xiCU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Code**\n",
+        "here's an ***implementation of a VQMC algorithm*** that uses a hierarchical tree tensor network structure to represent the quantum state of the system and includes a novel method for optimizing the variational parameters in the compressed wavefunction representation:"
+      ],
+      "metadata": {
+        "id": "w2c2rcXixNRM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install qiskit -quite\n",
+        "import numpy as np\n",
+        "from scipy.optimize import minimize\n",
+        "import qiskit as qk\n",
+        "from qiskit.opflow import X, Z, I\n",
+        "\n",
+        "\n",
+        "# Define the hierarchical tree tensor network structure\n",
+        "class Node:\n",
+        "    def __init__(self, value, children=[]):\n",
+        "        self.value = value\n",
+        "        self.children = children\n",
+        "\n",
+        "def build_hierarchical_tree(depth, dim):\n",
+        "    if depth == 0:\n",
+        "        return Node(np.random.rand(dim))\n",
+        "    else:\n",
+        "        return Node(np.random.rand(dim), [build_hierarchical_tree(depth-1, dim) for i in range(dim)])\n",
+        "\n",
+        "def compress_wavefunction(node, params):\n",
+        "    if len(node.children) == 0:\n",
+        "        return node.value\n",
+        "    else:\n",
+        "        dim = len(node.children)\n",
+        "        A = np.zeros((dim, len(params)))\n",
+        "        for i, child in enumerate(node.children):\n",
+        "            A[i,:] = compress_wavefunction(child, params)\n",
+        "        return np.tensordot(A, params, axes=([1],[0]))\n",
+        "\n",
+        "def calculate_local_energy(params, ansatz, hamiltonian):\n",
+        "    # Define the quantum circuit\n",
+        "    circuit = ansatz.bind_parameters(params)\n",
+        "    \n",
+        "    # Evaluate the expectation value of the Hamiltonian\n",
+        "    backend = qk.Aer.get_backend('qasm_simulator')\n",
+        "    counts = qk.execute(circuit, backend).result().get_counts()\n",
+        "    energy = 0\n",
+        "    for state, count in counts.items():\n",
+        "        amplitude = np.sqrt(count)\n",
+        "        energy += amplitude * hamiltonian.expectation(state)\n",
+        "    return energy\n",
+        "\n",
+        "def optimize_params(params, ansatz, hamiltonian, method='COBYLA'):\n",
+        "    cost_fn = lambda p: calculate_local_energy(p, ansatz, hamiltonian)\n",
+        "    res = minimize(cost_fn, params, method=method)\n",
+        "    return res.x\n",
+        "\n",
+        "# Define the system parameters\n",
+        "n_spins = 6\n",
+        "h = 1.0\n",
+        "\n",
+        "# Define the Hamiltonian\n",
+        "pauli_x = np.array([[0, 1], [1, 0]])\n",
+        "pauli_z = np.array([[1, 0], [0, -1]])\n",
+        "hamiltonian = qk.opflow.X ^ qk.opflow.Z\n",
+        "for i in range(n_spins-1):\n",
+        "    hamiltonian += qk.opflow.I^i ^ qk.opflow.X^(i+1)\n",
+        "    hamiltonian += h * qk.opflow.Z^i\n",
+        "\n",
+        "# Define the ansatz\n",
+        "depth = 3\n",
+        "dim = 2\n",
+        "tree = build_hierarchical_tree(depth, dim)\n",
+        "params = np.random.rand(depth*dim)\n",
+        "ansatz = qk.circuit.ParameterVector('theta', depth*dim)\n",
+        "circuit = qk.QuantumCircuit(n_spins)\n",
+        "for i in range(n_spins):\n",
+        "    circuit.rx(ansatz[i], i)\n",
+        "for i in range(depth):\n",
+        "    for j in range(dim):\n",
+        "        for k in range(dim):\n",
+        "            if j != k:\n",
+        "                circuit.cz(j + dim*i, k + dim*i+1)\n",
+        "\n",
+        "# Optimize the variational parameters\n",
+        "params = optimize_params(params, ansatz, hamiltonian)\n",
+        "\n",
+        "# Compress the wavefunction and evaluate the local energy\n",
+        "compressed_wavefunction = compress_wavefunction(tree, params)\n",
+        "local_energy = calculate_local_energy(compressed_wavefunction, ansatz, hamiltonian)\n",
+        "\n",
+        "print(\"Compressed wavefunction:\", compressed_wavefunction)\n",
+        "print(\"Local energy:\", local_energy)"
+      ],
+      "metadata": {
+        "id": "_oNor8FsxEMY"
       },
       "execution_count": null,
       "outputs": []
