--- a/ChatGPT.ipynb
+++ b/ChatGPT.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMZgvyWo7Tu3EBbCTqfcbu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +82,7 @@
         "\n",
         "where $\\sigma_i$ is the inverse of the $i$th particle, $J_{i,j}$ is the interaction force between $i$ and $j$ particles, $h_i$ is the external field acting on the $i$th particle .\n",
         "\n",
-        "In the case of the maximum possible subarray problem, we associate binary variables $x_i$ with spins by setting $x_i = \\frac{1}{2}(1 - \\sigma_i)$, where $\\sigma_i \\in \\{- 1,1\\ }$. Then we organize the Hamiltonian maximum subarray problem in the form of Exposition as:\n",
+        "In the case of the maximum possible subarray problem, we associate binary variables $x_i$ with spins by setting $x_i = \\frac{1}{2}(1 - \\sigma_i)$, where $\\sigma_i \\;in\\; {- 1,1 }$. Then we organize the Hamiltonian maximum subarray problem in the form of Exposition as:\n",
         "\n",
         "$H_{max-subarray} = - \\sum_{i,j} w_{i,j} \\frac{1}{4} (1 - \\sigma_i) (1 - \\sigma_j) - \\frac{1}{2 } \\sum_{i} w_{i,i} \\sigma_i$\n",
         "\n",
