--- a/1.ipynb
+++ b/1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPA7yLGWud3p4gitRZ4/cIb",
+      "authorship_tag": "ABX9TyPn8FoNJFvKt8we8IEIiLw4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "EVDDtiG620rn"
       },
@@ -48,6 +48,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Создаем наш произвольный гейт\n",
         "\"\"\"Define a custom single-qubit gate.\"\"\"\n",
         "class MyGate(cirq.Gate):\n",
         "    def __init__(self):\n",
@@ -59,7 +60,7 @@
         "    def _unitary_(self):\n",
         "        return np.array([\n",
         "            [1.0,  1.0],\n",
-        "            [-1.0, 1.0]\n",
+        "            [1.0, -1.0]\n",
         "        ]) / np.sqrt(2)\n",
         "\n",
         "    def _circuit_diagram_info_(self, args):\n",
@@ -70,42 +71,13 @@
       "metadata": {
         "id": "HdqgxuZa3AOL"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"Use the custom gate in a circuit.\"\"\"\n",
-        "circ = cirq.Circuit(\n",
-        "    my_gate.on(cirq.LineQubit(0))\n",
-        ")\n",
-        "\n",
-        "print(\"Circuit with custom gates:\")\n",
-        "print(circ)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3m2r0kQ_3sTV",
-        "outputId": "e1e59f46-056b-4618-8acf-ede151bd7f8d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Circuit with custom gates:\n",
-            "0: ───G───\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# Здесь мы применяем гейт адамара и выводим вектор\n",
         "\"\"\"Simulate a circuit with a custom gate.\"\"\"\n",
         "circ = cirq.Circuit(\n",
         "    cirq.H(cirq.LineQubit(0))\n",
@@ -122,9 +94,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "apeGvFth3wUM",
-        "outputId": "a9b0ed84-e58f-423c-8f5a-2c6d1d3b9782"
+        "outputId": "869c3f86-a0ea-4e3d-b798-f916d148f0ec"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,6 +107,52 @@
             "\n",
             "qubits: (cirq.LineQubit(0),)\n",
             "output vector: 0.707|0⟩ + 0.707|1⟩\n",
+            "\n",
+            "phase:\n",
+            "output vector: |⟩\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Применение нашего my_gate на кубит q1 с контролирующим q0\n",
+        "\n",
+        "q1 = cirq.LineQubit(1)\n",
+        "q2 = cirq.LineQubit(2)\n",
+        "\n",
+        "q0 = cirq.LineQubit(0)\n",
+        "\n",
+        "x = cirq.X(q0)\n",
+        "moment0 = cirq.Moment(x)\n",
+        "moment1 = cirq.Moment(my_gate.controlled().on(q0, q1))\n",
+        "\n",
+        "circuit = cirq.Circuit((moment0, moment1))\n",
+        "\n",
+        "sim = cirq.Simulator()\n",
+        "\n",
+        "res = sim.simulate(circuit)\n",
+        "#print(res.final_state_vector)\n",
+        "print(res)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E0U6wsL3V8ik",
+        "outputId": "1368b05e-e632-485d-de6d-4160f1e40a87"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "measurements: (no measurements)\n",
+            "\n",
+            "qubits: (cirq.LineQubit(0), cirq.LineQubit(1))\n",
+            "output vector: 0.707|10⟩ + 0.707|11⟩\n",
             "\n",
             "phase:\n",
             "output vector: |⟩\n"
